Bug 131907 - Crash: reject/clear formatting
Summary: Crash: reject/clear formatting
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.2.2 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0 target:6.4.4
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Regressions-1024plus-Columns
  Show dependency treegraph
 
Reported: 2020-04-05 15:03 UTC by Telesto
Modified: 2020-06-03 02:35 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: ["ScChangeTrack::AppendOneDeleteRange(ScRange%20const%20&,ScDocument%20*,short,long,short,unsigned%20long)"]
Regression By:


Attachments
Example file (7.77 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-04-05 15:52 UTC, Telesto
Details
bt with debug symbols (7.12 KB, text/plain)
2020-04-05 19:04 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-04-05 15:03:23 UTC
Description:
Crash: reject/clear formatting

Steps to Reproduce:
1. open the attached file
2. Edit -> Track Changes -> Manage -> Reject clear formatting

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 4501a0ba623ad61c5a4e0b807da2e96f0e4ce82c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 MM 2020-04-05 15:43:20 UTC
Please attach file.
Comment 2 Telesto 2020-04-05 15:52:35 UTC
Created attachment 159345 [details]
Example file
Comment 3 Julien Nabet 2020-04-05 19:04:45 UTC
Created attachment 159347 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
I attached bt.

I noticed this on console too:
warn:legacy.osl:162554:162554:sc/source/ui/view/reffact.cxx:224: missing view shell :-(
Comment 4 Julien Nabet 2020-04-05 19:07:00 UTC
I could reproduce this too on LO Debian package 6.4.2.2
Comment 5 Julien Nabet 2020-04-05 19:35:33 UTC
Eike:
I tested this straightforward patch and it worked:
diff --git a/sc/source/core/tool/chgtrack.cxx b/sc/source/core/tool/chgtrack.cxx
index 0b9f18ec3779..fd720806fc2a 100644
--- a/sc/source/core/tool/chgtrack.cxx
+++ b/sc/source/core/tool/chgtrack.cxx
@@ -4191,8 +4191,7 @@ bool ScChangeTrack::Reject(
             bRejected = pAct->Reject( pDoc );
             if ( bRejected )
             {
-                // pRefDoc NULL := Do not save deleted Cells
-                AppendDeleteRange( pAct->GetBigRange().MakeRange(), nullptr, short(0),
+                AppendDeleteRange( pAct->GetBigRange().MakeRange(), pDoc, short(0),
                     pAct->GetActionNumber() );
             }
         }

However, it does the contrary of the comment deleted:
// pRefDoc NULL := Do not save deleted Cells

Git history of this comment gives:
commit 9964dbdda0dd8bb0471a3153ce133a76e98a09b0
Author: Philipp Weissenbacher <p.weissenbacher@gmail.com>
Date:   Thu Nov 14 12:46:35 2013 +0100

    Translate German comments

then:
commit d0484bcdcbffd42d242647a2fdc1a203d176b775
Author: Jens-Heiner Rechtien <hr@openoffice.org>
Date:   Mon Sep 18 23:16:46 2000 +0000

    initial import

Any thoughts here?
Comment 6 Xisco Faulí 2020-04-06 16:38:46 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=0ef5c47547bec6319b853326603f3b807407fe78

author	Noel Grandin <noel.grandin@collabora.co.uk>	2019-10-28 13:08:29 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-10-29 14:22:48 +0100
commit 0ef5c47547bec6319b853326603f3b807407fe78 (patch)
tree ced33b9ae621fa1cd807f8647a5149eed8bc743b
parent 07bde58988705ca45a619eb7a4e670a5d951abf6 (diff)
sc: rowcol: tdf#50916 convert core/tool

Bisected with: bibisect-linux64-6.4

Adding Cc: to Noel Grandin
Comment 7 Commit Notification 2020-04-11 19:23:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c076b99dd21edae0364cf9319a221a1d6a4bd487

tdf#131907 Crash: reject/clear formatting

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2020-04-14 17:21:20 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/f973091959dacd74501606a01099f107d25d8fc7

tdf#131907 Crash: reject/clear formatting

It will be available in 6.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2020-04-15 11:46:11 UTC
Setting to VERIFIED since there is already a test covering it.


@Noel, thanks for fixing this issue!