tdf#131907 Crash: reject/clear formatting

regression from
    commit 0ef5c47547bec6319b853326603f3b807407fe78
    sc: rowcol: tdf#50916 convert core/tool

Change-Id: Ib8207f60d34e4257fc9a854f4e4d358951e24718
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92062
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit c076b99dd21edae0364cf9319a221a1d6a4bd487)